fixed main(not responsive)

--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ body {
 
 .exp {
     margin-top: 200px;
-    height: 60em;
+    height: 30em;
 }
 
 .exp h2 {
@@ -245,23 +245,30 @@ body {
     grid-template-rows: repeat(2, 2fr);
     justify-items: center;
     text-align: center;
+    margin-left: 15em;
+    margin-right: 15em;
 }
 
 .flex-box {
-    width: 10.5em;
-    height: 8.5em;
+    width: 8em;
+    height: 1.5em;
     background-color: rgb(61, 61, 61) !important;
     color: white;
     font-size: 25px;
     text-align: center;
-    line-height: 210px;
+    /*line-height: 210px;*/
     border-radius: 20px;
-    margin: 20px;
-    margin-left: 6vw;
-    margin-right: 6vw;
+    /*margin: 20px;*/
+    /*margin-left: 6vw;*/
+    /*margin-right: 6vw;*/
     transition: color 0.5s;
     transition: all 1s;
-    margin-bottom: 5em;
+    margin-bottom: 2em;
+}
+
+.flex-box p{
+    font-size: .5em;
+    margin-top: .9em;
 }
 
 .flex-box:hover {
@@ -409,7 +416,7 @@ footer a {
 }
 
 .div-item{
-    font-size: .9em;
+    font-size: .6em;
 }
 
 footer 
@@ -436,7 +443,7 @@ footer a{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 
 .div3{
